fixing commit
I have some ideas, but this means that I must global refactor Tcp server
implementaion.