@@ -1,45 +1,52 @@
 package com.ramshteks.nimble.core;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 
 import static com.ramshteks.nimble.core.EventIO.*;
 
 
 public class Nimble implements Runnable {
 
-	private final EventIOQueue<EventBase> queueToAdd;
-	private final EventIOQueue<EventBase> queueToRemove;
+	private final LinkedList<EventBase> queueToAdd;
+	private final LinkedList<EventBase> queueToRemove;
 
 	//private final Object lock = new Object();
 
 	private Thread mainThread;
 	private final EventStack serverInputEventStream;
 	private boolean mainThreadStarted = false;
-
+	private int count = 0;
 	@SuppressWarnings("Convert2Diamond")
 	public Nimble(){
 
-		queueToAdd = new EventIOQueue<EventBase>();
-		queueToRemove = new EventIOQueue<EventBase>();
+		queueToAdd = new LinkedList<EventBase>();
+		queueToRemove = new LinkedList<EventBase>();
 
 		serverInputEventStream = new EventStack();
 	}
 
 	public void addPlugin(EventBase eventBase){
+		count ++;
 		synchronized (queueToAdd){
-			queueToAdd.addLast(eventBase);
+			queueToAdd.add(0, eventBase);
 		}
 	}
 
 	public void removePlugin(EventBase eventBase){
+		count --;
 		synchronized (queueToRemove){
-			queueToRemove.addLast(eventBase);
+			queueToRemove.add(0, eventBase);
 		}
+	}
+
+	public int pluginsCount(){
+		return count;
 	}
 
 	public void start(){
 		mainThread = new Thread(this);
 		mainThread.setPriority(Thread.MAX_PRIORITY);
+		mainThread.setName("Nimble-thread");
 		mainThread.start();
 	}
 
@@ -67,9 +74,9 @@ public class Nimble implements Runnable {
 		NimbleEvent exit_from_queue = new NimbleEvent(NimbleEvent.EXIT_FROM_QUEUE);
 
 		//noinspection Convert2Diamond
-		ArrayList<EventReceiver> receivers = new ArrayList<EventReceiver>();
+		LinkedList<EventReceiver> receivers = new LinkedList<EventReceiver>();
 		//noinspection Convert2Diamond
-		ArrayList<EventSender> senders = new ArrayList<EventSender>();
+		LinkedList<EventSender> senders = new LinkedList<EventSender>();
 
 		while (true){
 
@@ -87,55 +94,65 @@ public class Nimble implements Runnable {
 
 			startTimeMillis = System.currentTimeMillis();
 
+			//main loop start
 			pushEventTo(receivers, startLoopEvent);
 
-
-			if(serverInputEventStream.hasEventToHandle()){
-				event = serverInputEventStream.nextEvent();
-				pushEventTo(receivers, event);
+			int len = senders.size();
+			for (int i = 0; i < len; i++)
+			{
+				if(serverInputEventStream.hasEventToHandle()){
+					event = serverInputEventStream.nextEvent();
+					pushEventTo(receivers, event);
+				}
 			}
 
-			int len = senders.size();
+			int eventsCount = 0;
+			//int len = senders.size();
 			for(int i = 0; i < len; i++)
 			{
 				EventIO.EventSender sender = senders.get(i);
 				if(sender.hasEventToHandle()){
 					serverInputEventStream.pushEvent(sender.nextEvent());
+					eventsCount ++;
 				}
 			}
 
 
 			pushEventTo(receivers, endLoopEvent);
+			//main loop finish
 
 			processExitFromQueue(exit_from_queue, receivers, senders);
 
 			endTimeMillis = System.currentTimeMillis();
-
+			//System.out.println("loop "+(endTimeMillis - startTimeMillis) + " read events: "+eventsCount);
 			//balancing sleep time
 			long sleepTime = 5;
-			long loopTime = endTimeMillis - startTimeMillis;
+			/*long loopTime = endTimeMillis - startTimeMillis;
 			if(loopTime >= sleepTime){
 				sleepTime = 0;
 			}else{
 				sleepTime = sleepTime - loopTime;
 			}
-
+			if(loopTime > 100){
+				System.out.println("                                ###Overhead: " + loopTime +" ###");
+			}
 			if(sleepTime!=0){
 				//noinspection EmptyCatchBlock
-				try{
-					Thread.sleep(sleepTime);
-				}catch (Exception exception){}
-			}
+
+			}*/
+			try{
+				Thread.sleep(sleepTime);
+			}catch (Exception exception){}
 		}
 	}
 
-	private void processExitFromQueue(NimbleEvent exitEvent, ArrayList<EventReceiver> receivers, ArrayList<EventSender> senders) {
+	private void processExitFromQueue(NimbleEvent exitEvent, LinkedList<EventReceiver> receivers, LinkedList<EventSender> senders) {
 		synchronized (queueToRemove){
 			if (queueToRemove.size() != 0) {
 				EventBase eventBase;
 				EventReceiver receiver;
 
-				eventBase = queueToRemove.removeFirst();
+				eventBase = queueToRemove.remove(queueToRemove.size() - 1);
 
 				if(receivers.contains(eventBase)){
 					receiver = (EventReceiver)eventBase;
@@ -150,7 +167,8 @@ public class Nimble implements Runnable {
 		}
 	}
 
-	private void processEnterToQueue(NimbleEvent enterEvent, ArrayList<EventReceiver> receivers, ArrayList<EventSender> senders) {
+	private void processEnterToQueue(NimbleEvent enterEvent, LinkedList<EventReceiver> receivers, LinkedList<EventSender> senders) {
+
 		synchronized (queueToAdd){
 			if (queueToAdd.size() != 0) {
 				int len = queueToAdd.size();
@@ -159,24 +177,24 @@ public class Nimble implements Runnable {
 				EventSender sender;
 				EventReceiver receiver;
 
-				//for (int index = 0; index < len; index++) {
-				eventBase = queueToAdd.removeFirst();
+				for (int index = 0; index < len; index++) {
+					eventBase = queueToAdd.remove(queueToAdd.size() - 1);
 
-				if(eventBase instanceof EventSender){
-					senders.add(senders.size(), (EventSender)eventBase);
-				}
+					if(eventBase instanceof EventSender){
+						senders.addLast((EventSender)eventBase);
+					}
 
-				if(eventBase instanceof EventReceiver){
-					receiver = (EventReceiver)eventBase;
-					receivers.add(receivers.size(), receiver);
-					receiver.pushEvent(enterEvent);
+					if(eventBase instanceof EventReceiver){
+						receiver = (EventReceiver)eventBase;
+						receivers.addLast(receiver);
+						receiver.pushEvent(enterEvent);
+					}
 				}
-				//}
 			}
 		}
 	}
 
-	private void pushEventTo(ArrayList<EventReceiver> receivers, Event event){
+	private void pushEventTo(LinkedList<EventReceiver> receivers, Event event){
 		int len = receivers.size();
 		EventIO.EventReceiver receiver;
 		for (int i = 0; i < len; i++){
